X X
    * Add Pickaxe + Looting = deconstruct (reverse crafting)
    * Add Hoe + Power = move time
    * Improve Pickaxe/Shovel/Axe + Flame = auto-smelt to drop natural item if unsmeltable
    * Improve Axe + Power = fell tree, now breaks more branches depending on enchantment level
    * Fix not ignoring cancelled events (partial fix for ticket 4)
    * Fix NPE and player disconnect with certain enchantments when using ModLoaderMP (ticket 6)
    * Fix Axe + Power = fell tree, causing a crash in some situations (ticket 3)

2012-02-15  0.5.1a
    * Fix durability destruction bug affecting all pickaxes (ticket 7)
    * Compile against CraftBukkit 1.1-R4

2012-02-13  0.5.1
    * Add Boots + Power = witch's broom (sprint flying)
    * Add Boots + Punch = shift to hover jump
    * Add Boots + Flame = firewalker (set ground on fire)
    * Add Chestplate + Infinity = god mode (no damage)
    * Improve Hoe + Aqua Affinity = auto-hydrate, now can make flowing water stationary
    * Improve Sword + Flame, now creates a lit path (light level 15), no more temp glowstone

2012-02-10  0.3
    * Add Bow + Knockback = pierce blocks
    * Add Shovel + Silk Touch II = harvest fallen snow, fire
    * Add Pickaxe + Silk Touch II = harvest ice
    * Merge functionality of older Sublimation project (add sublimateIce option)
    * Change strike lightning 100+ meters away to Sword + Power (was Sword + Flame)
    * Add Sword + Flame = temporary glowstone headlamp
    * Add Helmet + Fire Aspect = swim in lava
    * Add Chestplate + Knockback = reflect arrows

2012-02-03  0.2
    * Add Bow + Sharpness = increase velocity
    * Add Bow + Aqua Affinity = freeze water, stun players
    * Add Bow + Bane of Arthropods = poison
    * Add Bow + Efficiency = instant shoot
    * Add Sword + Flame = strike lightning 100+ meters away
    * Fix Hoe + Respiration to grow saplings and crops using right-click
    * Fix Flint & Steel + Fire Protection to now combine with Fire Aspect